[web] Add: Task #5082 Fix site footer support text layout bug

--- a/source/web/src/static/styles/project/siteFooter.less
+++ b/source/web/src/static/styles/project/siteFooter.less
@@ -91,9 +91,9 @@
                 float: left;
                 margin-top: @support-margin-top;
                 margin-left: 40px;
-                max-width: 80px;
+                min-width: 80px;
                 > h3 { color: #aaaaaa; margin-top: 0px;  margin-bottom: 30px; font-size: 16px;}
-                > a {color: #EEEEEE; text-decoration: none; font-size: 14px; margin-bottom: 12px; display: inline-block;}
+                > a {color: #EEEEEE; text-decoration: none; font-size: 14px; margin-bottom: 12px; display: block;}
             }
             .feature {
                 float: left;
